Use Java 21 collection and switch APIs